<resources>
    <string name="app_name">GoDjangoNotify2.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Messages</string>
    <string name="title_history">History</string>
    <string name="title_config">Configuration</string>
    <string name="copy_text">Text copied to clipboard</string>
    <string name="deleteAll_pedidos">Are you sure?</string>
    <string name="saved">Saved</string>
    <string name="ip">dns connection</string>
    <string name="port">port</string>
    <string name="version">version</string>
    <string name="interval">Interval(1s - …)</string>
    <string name="save">Save</string>
    <string name="public_key">Public key</string>
    <string name="powered_by_tfprotocol">Powered by TFProtocol</string>
    <string name="paste">Paste</string>
    <string name="install_whatsapp_business">Install Whatsapp Business</string>
    <string name="install_whatsapp">Install Whatsapp</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="error_generating_qr">Error generating QR</string>
    <string name="loading">Loading…</string>
    <string name="interval_error">Interval has to be greater than 1</string>
    <string name="running">Running…</string>
    <string name="unread_notifications">unread notifications</string>
    <string name="up_to_date">Up to date</string>
    <string name="add_new_configuration">Add new configuration</string>
    <string name="new_configuration">New configuration</string>
    <string name="name">Name</string>
    <string name="folder_name">Folder name</string>
    <string name="add_folder">Add folder</string>
    <string name="folders">Folders</string>
    <string name="removed">Removed</string>
    <string name="undo">Undo</string>
    <string name="do_you_want_to_save_all_in_the_history">Do you want to save all in the history?</string>
    <string name="real_folder_name">Real folder name</string>
    <string name="folder">Folder</string>
    <string name="do_you_want_to_clean_history">Do you want to clean the history?</string>
    <string name="clean_database">Clean database</string>
    <string name="all_message_record_will_be_deleted">All message record will be deleted and will download again</string>
    <string name="do_you_want_to_delete_this_configuration">Do you want to delete this configuration?</string>
    <string name="there_is_already_a_configuration_with_that_name">There is already a configuration with that name</string>
    <string name="importConfig">Import</string>
    <string name="exportConfig">Export</string>
    <string name="exported">Exported</string>
    <string name="share_configuration">Share Configuration</string>
    <string name="saved_in">Saved in</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
</resources>