<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfigActivity"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_arrow_back_ios_24"
            app:backgroundTint="@android:color/transparent"
            android:tint="?attr/colorOnSurface"
            />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:hint="@string/name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="text"
                        android:id = "@+id/etName"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <!--
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivQrCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    />-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:hint="@string/ip">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="text"
                        android:id = "@+id/etIpServe"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:hint="@string/port">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:inputType = "number"
                        android:imeOptions="actionNext"
                        android:id = "@+id/etPortServe"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:hint="hash">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="text"
                        android:id = "@+id/etHash"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:hint="@string/version">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="text"
                        android:id = "@+id/etProtocol"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <!--            <com.google.android.material.textfield.TextInputLayout-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginHorizontal="20dp"-->
                <!--                android:textSize="16sp"-->
                <!--                android:padding="0dp"-->
                <!--                android:hint="@string/interval">-->

                <!--                <androidx.appcompat.widget.AppCompatEditText-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:padding="10dp"-->
                <!--                    android:inputType = "number"-->
                <!--                    android:id = "@+id/etInterval"-->
                <!--                    />-->
                <!--            </com.google.android.material.textfield.TextInputLayout>-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBranding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/powered_by_tfprotocol"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivKey"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:src="@drawable/baseline_vpn_key_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:textSize="16sp"
                        android:padding="0dp"
                        android:hint="@string/public_key"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/fabPasteKey"
                        android:id="@+id/tvKey"
                        android:maxLines="1"
                        android:text="@string/public_key"
                        app:layout_constraintStart_toEndOf="@+id/ivKey"
                        app:layout_constraintTop_toTopOf="parent">
                    </androidx.appcompat.widget.AppCompatTextView>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabPasteKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_content_copy_24"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:backgroundTint="?attr/backgroundTint"
                        app:tint="?attr/colorOnSecondary"
                        app:rippleColor="#A7FFEB"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/paste" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnImport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/import_2_svgrepo_com"
                        android:text="@string/importConfig"
                        app:iconGravity="textStart"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnExport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/export_3_svgrepo_com"
                        android:text="@string/exportConfig"
                        android:layout_marginStart="5dp"
                        app:iconGravity="textStart"
                        android:layout_weight="1"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/folders"
                        />
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        />
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnAddFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/round_add_24"
                        />
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/cv_folder"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
