<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ConfigFragment">
    <!--ipServer,portServer,publicKey,hash,len,protocol,protoHandler-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/etInterval"
                    android:hint="@string/interval"
                    android:drawableStart="@drawable/baseline_timer_24"
                    android:layout_marginHorizontal="10dp"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnPickImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:src="@drawable/import_2_svgrepo_com"
                    />
               <androidx.appcompat.widget.AppCompatImageButton
                   android:id="@+id/btnScanner"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:layout_gravity="end"
                   android:background="@android:color/transparent"
                   android:padding="10dp"
                   android:src="@drawable/export_3_svgrepo_com"
                   />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvConfig"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_config"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCleanDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="mini"
            app:backgroundTint="?attr/backgroundTint"
            android:tint="?attr/colorOnSecondary"
            android:src="@drawable/round_cleaning_services_24"
            android:contentDescription="@string/clean_database" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="?attr/backgroundTint"
            android:tint="?attr/colorOnSecondary"
            android:src="@drawable/round_add_24"
            android:contentDescription="@string/add_new_configuration" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>